<resources>
    <string name="app_name" translatable="false">AapkaTrade</string>
    <string-array name="stepLabels">
        <item>Approval</item>
        <item>Processed</item>
        <item>Shipped</item>
        <item>Delivery</item>
    </string-array>
    <string name="my_profile_heading" translatable="false">My Profile</string>
    <string name="my_profile_detail_heading" translatable="false">Hello,<font color="#0000FF"> Arvind </font> - To Update your account information.</string>
    <string name="save" translatable="false">Save</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="aapka_data" translatable="false">AAPKA <font color='white'>TRADE</font></string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="my_company_profile_heading" translatable="false">My Company Profile</string>
    <string name="change_password_heading" translatable="false">Change Password</string>
    <string name="write_and_review">Write And Review</string>
    <string name="add_company_heading" translatable="false">Add Company</string>
    <string name="user_name" translatable="false">Pawan</string>
    <string name="date" translatable="false">31-2-2016</string>
    <string name="edit" translatable="false">Edit</string>
    <string name="compant_list_heading" translatable="false">Company List</string>
    <string name="company_name_heading" translatable="false">Company Name*</string>
    <string name="dateheading" translatable="false">Date</string>
    <string name="some" translatable="false">Aapka data</string>
    <string name="some2" translatable="false">Aapka data</string>
    <string name="arvind_data" translatable="false">data</string>
    <string name="rs" translatable="false">\u20B9</string>
    <string name="action_heading" translatable="false">Action</string>
    <string name="dashboard_heading" translatable="false">My Company Profile</string>
    <string name="forgotpassword" translatable="false">Forget Password?</string>
    <string name="new_user" translatable="false">New User?</string>
    <string name="title_activity_login_dashboard" translatable="false">Login_dashboard</string>
    <string name="title_activity_logindashboard" translatable="false">logindashboard</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="seller" translatable="false">SELLER</string>
    <string name="buyer" translatable="false">BUYER</string>
    <string name="businessassociate" translatable="false">BUSINESS ASSOCIATE</string>
    <string name="comp_doc" translatable="false">Company Document</string>
    <string name="personal_doc" translatable="false">Personal Document(Pan Card,Aadhar Card,Election ID)</string>
    <string name="drawer_open" translatable="false">draweropen</string>
    <string name="drawer_close" translatable="false">drawerclose</string>
    <string name="language" translatable="false">language</string>
    <string name="product" translatable="false">Product:</string>
    <string name="qty" translatable="false">QTY:</string>
    <string name="qty_def" translatable="false">05</string>
    <string name="product_list_heading" translatable="false">List Product</string>
    <string name="add_product_heading" translatable="false">Add Products</string>
    <string name="d" translatable="false">Data value</string>
    <string name="near_by_you" translatable="false">Near by you</string>
    <string name="availability" translatable="false">Availability</string>
    <string name="product_name" translatable="false">Product Name</string>
    <string name="product_name1" translatable="false">Interior Decoration</string>
    <string name="offer_price" translatable="false">$74.0</string>
    <string name="mrp_price" translatable="false">$122.0</string>
    <string name="item_details" translatable="false">Item Details</string>
    <string name="brand" translatable="false">Brand : Apple</string>
    <string name="product_code" translatable="false">Product Code : Product15</string>
    <string name="quantity" translatable="false">Quantity</string>
    <string name="buy" translatable="false">Buy Now!</string>
    <string name="title_activity_product_list" translatable="false">ProductListActivity</string>
    <string name="category" translatable="false">Category</string>
    <string name="phone_number" translatable="false">+91 9696969696</string>
    <string name="loginregisterfooter" translatable="false">Please Click one for Login/Register</string>
    <string name="tab_1" translatable="false">Home</string>
    <string name="tab_2" translatable="false">About Us</string>
    <string name="tab_3" translatable="false">Rate Us</string>
    <string name="tab_4" translatable="false">Account</string>
    <string name="tab_5" translatable="false">Contact Us</string>
    <string name="welcomeguest" translatable="false">Welcome Guest</string>
    <string name="nointernetconnection" translatable="false">No Internet connection found.</string>
    <string name="nointernetconnection2" translatable="false">Check your connection.</string>
    <string name="retry" translatable="false">RETRY</string>
    <string name="viewall" translatable="false">View All</string>
    <string name="latest_product" translatable="false">LATEST PRODUCTS</string>
    <string name="latest_deals" translatable="false">LATEST POST</string>
    <string name="new_arrival" translatable="false">NEW ARRIVAL</string>
    <string name="hot_deals" translatable="false">HOT DEALS</string>
    <string name="english" translatable="false">English</string>
    <string name="hindi" translatable="false">Hindi</string>
    <string name="shop_name" translatable="false">Shop Name*</string>
    <string name="address" translatable="false">Address</string>
    <string name="address1" translatable="false">Address*</string>
    <string name="confirm_password" translatable="false">Confirm Password</string>
    <string name="password" translatable="false">Password</string>
    <string name="google_api" translatable="false">AIzaSyDEC-Z8NKvcLAbB4vKdNa2ByUcXfOX_Tao</string>
    <string name="forgot_your_password" translatable="false">Forgot your Password?</string>
    <string name="forgot_your_password_instruction1" translatable="false">Enter your Email/Mobile number below to receive OTP</string>
    <string name="forgot_your_password_instruction2" translatable="false">  </string>
    <string name="email" translatable="false">Email</string>
    <string name="emailId" translatable="false">Email ID*</string>
    <string name="or" translatable="false">OR</string>
    <string name="mobile_no" translatable="false">mobile no</string>
    <string name="send_otp" translatable="false">SEND OTP</string>
    <string name="otp_data_1" translatable="false">Make sure your information is</string>
    <string name="otp_data_2" translatable="false">correct before continuing</string>
    <string name="verify" translatable="false">VERIFY</string>
    <string name="otp_not_recived" translatable="false">OTP Not Received?</string>
    <string name="price" translatable="false">Price</string>
    <string name="cross_price" translatable="false">Cross Price</string>
    <string name="company_profile_heading" translatable="false">Company Profile</string>
    <string name="company_profile_data1" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type speciman book.</string>
    <string name="address_line1" translatable="false">3rd Floor, Tower B, JMD Megapolis</string>
    <string name="address_line2" translatable="false">Sohna Road, Sector 48</string>
    <string name="address_line3" translatable="false">Gurugram, Haryana 122001</string>
    <string name="item_price" translatable="false">18,941</string>
    <string name="item_subtotal_price" translatable="false">19,689</string>
    <string name="product_detail" translatable="false">Product Detail:</string>
    <string name="product_details_heading" translatable="false">Product Details</string>
    <string name="express_delivery" translatable="false">Express Delivery:   99</string>
    <string name="delivery_date" translatable="false">Delivery date: 19 Jan to 20 Jan</string>
    <string name="subtotal" translatable="false">Subtotal:</string>
    <string name="webservice_base_url" translatable="false">http://staging.aapkatrade.com/slim</string>
    <string name="msg_sender" translatable="false">IM-SMSEZY</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="latest_update" translatable="false">LATEST UPDATE</string>
    <string name="personalInfo" translatable="false">Personal Information</string>
    <string name="professionalDetails" translatable="false">Professional Details</string>
    <string name="bankDetails" translatable="false">Bank Details</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="user_name1" translatable="false">User Name*</string>
    <string name="first_name" translatable="false">First Name*</string>
    <string name="last_name" translatable="false">Last Name*</string>
    <string name="father_name" translatable="false">Father Name*</string>
    <string name="password1" translatable="false">Password*</string>
    <string name="confirm_password1" translatable="false">Confirm Password*</string>
    <string name="mobile" translatable="false">Mobile*</string>
    <string name="date_of_birth" translatable="false">Date Of Birth*</string>
    <string name="pincode" translatable="false">Pincode</string>
    <string name="accept_t_and_c" translatable="false">Accept Terms and Conditions</string>
    <string name="save_and_next" translatable="false">Save &amp; Next</string>
    <string name="search_data" translatable="false">What?e.g. Dairy</string>
    <string name="ok">OK</string>
    <string name="aacount_no" translatable="false">Account No.*</string>
    <string name="branch_code" translatable="false">Branch Code*</string>
    <string name="branch_name" translatable="false">Branch Name</string>
    <string name="ifsc_code" translatable="false">IFSC Code*</string>
    <string name="micr_code" translatable="false">MICR Code*</string>
    <string name="account_holder_name" translatable="false">Account Holder Name*</string>
    <string name="registered_mobile" translatable="false">Registered Mobile*</string>
    <string name="new_user_signup" translatable="false">New User Signup</string>
    <string name="stock_heading" translatable="false">Stock:</string>
    <string name="about_us_data1">Aapka trade is indias unique business platform where everybody can do the business. We are taking your services and products no matter how small or big to all over india from individual services to small scale businesses, startups or large corporations. </string>
    <string name="about_us_data2">The Company mission is</string>
    <string name="about_us_data3">ANYBODY CAN DO THE BUSINESS</string>
    <string name="about_us_data4">Aapkatrade for Buyers</string>
    <string name="about_us_data5">Convenience of connecting with sellers anytime, anywhere Wider marketplace with a range of products and suppliers One-stop shop for all requirements</string>
    <string name="about_us_data6">You can shop all your needs</string>
    <string name="about_us_data7">Aapkatrade for Suppliers</string>
    <string name="about_us_data8"><li>Improved business visibility</li>.\n<li>Entrance to buyers from across the Globe Enlarged credibillity for your brand</li></string>
    <string name="about_us_data9">You can sell any kind of services / products</string>
</resources>