<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_layout" />


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <RelativeLayout
                    android:id="@+id/cartViewPagerContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal">



                    <android.support.v4.view.ViewPager
                        android:id="@+id/cartCheckOutViewPager"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:id="@+id/viewpager_indicator"
                        android:layout_width="40dp"
                        android:layout_height="20dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">


                            <TextView
                                style="@style/myAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/product"
                                android:textStyle="bold" />


                            <TextView
                                style="@style/myAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:text="@string/qty"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:orientation="horizontal">


                            <TextView
                                style="@style/myAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/product_name"
                                android:textColor="@color/green" />


                            <TextView
                                style="@style/myAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:text="@string/qty_def"
                                android:textColor="@color/green" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:id="@+id/addressLine2"
                                style="@style/myAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/item_price"
                                android:textColor="@color/orange"
                                android:textSize="@dimen/textsize_large"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="10dp">

                            <TextView
                                style="@style/myAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/product_detail"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp">

                            <TextView
                                style="@style/myAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/express_delivery" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp">

                            <TextView
                                style="@style/myAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/delivery_date" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="10dp">

                            <TextView
                                style="@style/myAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/subtotal"
                                android:textStyle="bold" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp">

                            <TextView
                                style="@style/myAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/item_subtotal_price"
                                android:textColor="@color/orange"
                                android:textSize="@dimen/textsize_medium" />
                        </LinearLayout>


                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <include
                    android:id="@+id/address_for_shipping"
                    layout="@layout/content_address" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_orange_back"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="Proceed to Payment"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_medium" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>